--- a/iotest/src/main/resources/application.properties
+++ b/iotest/src/main/resources/application.properties
@@ -1,3 +1,22 @@
 #active profile
 spring.profiles.active=mysql
 
+#freemarker 
+
+spring.freemarker.templateLoaderPath=classpath:/templates/
+# Enable template caching.
+spring.freemarker.cache=false
+# Template encoding.
+spring.freemarker.charset=UTF-8
+ # Check that the templates location exists.
+spring.freemarker.check-template-location=true
+# Content-Type value.
+spring.freemarker.content-type=text/html
+ # Set whether all request attributes should be added to the model prior to merging with the template.
+spring.freemarker.expose-request-attributes=true
+# Set whether all HttpSession attributes should be added to the model prior to merging with the template.
+spring.freemarker.expose-session-attributes=true
+# Name of the RequestContext attribute for all views.
+spring.freemarker.request-context-attribute=request
+# Suffix that gets appended to view names when building a URL.
+spring.freemarker.suffix=.ftl
