--- a/iotest/src/main/resources/application-mysql.properties
+++ b/iotest/src/main/resources/application-mysql.properties
@@ -1,5 +1,6 @@
 #msyql database
 database=mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/iotest
+spring.datasource.url=jdbc:mysql://localhost:3306/iotest?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+spring.datasource.username=root
 spring.datasource.username=root
 spring.datasource.password=toor
