--- a/iotest/src/main/resources/application.properties
+++ b/iotest/src/main/resources/application.properties
@@ -20,3 +20,7 @@ spring.freemarker.expose-session-attributes=true
 spring.freemarker.request-context-attribute=request
 # Suffix that gets appended to view names when building a URL.
 spring.freemarker.suffix=.ftl
+
+
+# log file
+logging.file=/logs/iotest.log
