后台数据库ok

--- a/iotest/src/main/resources/application.properties
+++ b/iotest/src/main/resources/application.properties
@@ -1,25 +1,10 @@
 #active profile
 spring.profiles.active=mysql
 
-#freemarker 
-
-spring.freemarker.templateLoaderPath=classpath:/templates/
-# Enable template caching.
-spring.freemarker.cache=false
-# Template encoding.
-spring.freemarker.charset=UTF-8
- # Check that the templates location exists.
-spring.freemarker.check-template-location=true
-# Content-Type value.
-spring.freemarker.content-type=text/html
- # Set whether all request attributes should be added to the model prior to merging with the template.
-spring.freemarker.expose-request-attributes=true
-# Set whether all HttpSession attributes should be added to the model prior to merging with the template.
-spring.freemarker.expose-session-attributes=true
-# Name of the RequestContext attribute for all views.
-spring.freemarker.request-context-attribute=request
-# Suffix that gets appended to view names when building a URL.
-spring.freemarker.suffix=.ftl
+### database
+# Hibernate ddl auto (create, create-drop, update, none)
+# 自动补齐数据库中表结构
+spring.jpa.hibernate.ddl-auto=update
 
 
 # log file
