--- a/iotest/src/main/resources/application.properties
+++ b/iotest/src/main/resources/application.properties
@@ -9,3 +9,9 @@ spring.jpa.hibernate.ddl-auto=update
 
 # log file
 logging.file=/logs/iotest.log
+
+
+#jms
+spring.activemq.broker-url=tcp://192.168.0.153:61616
+spring.activemq.in-memory=true
+spring.activemq.pool.enabled=false
