jms消息解密， 日志中文乱码

--- a/iotest/src/main/resources/application.properties
+++ b/iotest/src/main/resources/application.properties
@@ -15,3 +15,8 @@ logging.file=/logs/iotest.log
 spring.activemq.broker-url=tcp://192.168.0.153:61616
 spring.activemq.in-memory=true
 spring.activemq.pool.enabled=false
+
+#中文乱码
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
